--- a/algorithms.bib
+++ b/algorithms.bib
@@ -2,26 +2,129 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2017-09-27 20:56:23 -0500 
+%% Created for Jeff Erickson at 2018-02-10 18:15:43 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
+@mastersthesis{f-sscl-78,
+	Author = {Fajuyigbe, Oladele},
+	Comments = {O(S_{RD}) time, where for CNF grammars S_{RD} = # production rules},
+	Date-Added = {2018-02-10 23:21:30 +0000},
+	Date-Modified = {2018-02-10 23:29:49 +0000},
+	Read = {1},
+	School = {Oregon St. Univ.},
+	Title = {The shortest strings in a context-free langauge},
+	Url = {http://ir.library.oregonstate.edu/concern/graduate_thesis_or_dissertations/9z903315x},
+	Year = {1978}}
+
+@misc{gr-cpqws-17,
+	Arxiv = {1612.08872v2},
+	Author = {Grigorev, Semyon and Ragozina, Anastasiya},
+	Date-Added = {2018-02-10 23:11:30 +0000},
+	Date-Modified = {2018-02-10 23:12:18 +0000},
+	Howpublished = {Preprint},
+	Month = {January},
+	Read = {1},
+	Title = {Context-Free Path Querying with Structural Representation of Result},
+	Year = {2017}}
+
+@article{se-sqcg-08,
+	Author = {Sevon, Petteri and Eronen, Lauri},
+	Date-Added = {2018-02-10 23:08:03 +0000},
+	Date-Modified = {2018-02-10 23:12:19 +0000},
+	Doi = {10.1515/jib-2008-100},
+	Journal = {J. Integrative Bioinformatics},
+	Number = {2},
+	Pages = {157--172},
+	Read = {1},
+	Title = {Subgraph Queries by Context-free Grammars},
+	Volume = {5},
+	Year = {2008}}
+
+@misc{h-qpguc-16,
+	Arxiv = {1502.02242v2},
+	Author = {Hellings, Jelle},
+	Date-Added = {2018-02-10 22:59:40 +0000},
+	Date-Modified = {2018-02-10 23:01:00 +0000},
+	Howpublished = {Preprint},
+	Month = {January},
+	Read = {1},
+	Title = {Querying for Paths in Graphs using Context-Free Path Queries},
+	Year = {2016}}
+
+@inproceedings{h-ccpq-14,
+	Author = {Hellings, Jelle},
+	Booktitle = {Proc. 17th Int Conf. Database Theory},
+	Date-Added = {2018-02-10 22:57:48 +0000},
+	Date-Modified = {2018-02-10 23:01:00 +0000},
+	Doi = {10.5441/002/icdt.2014.15},
+	Pages = {119--130},
+	Read = {1},
+	Title = {Conjunctive Context-Free Path Queries},
+	Year = {2014}}
+
+@inproceedings{mj-afsts-75,
+	Author = {Mclean, Michael J. and Johnston, Daniel B.},
+	Booktitle = {Combaintorial Mathematics~{III}},
+	Date-Added = {2018-02-10 22:27:48 +0000},
+	Date-Modified = {2018-02-10 22:32:56 +0000},
+	Doi = {10.1007/BFb0069557},
+	Number = {452},
+	Pages = {180--196},
+	Publisher = {Springer},
+	Read = {1},
+	Series = {Lecture Notes Math.},
+	Title = {An algorithm for finding the shortest terminal strings which can be produced from non-terminals in context-free grammars},
+	Year = {1975}}
+
+@article{mr-icccr-00,
+	Author = {Melski, David and Reps, Thomas},
+	Comments = {O((N+T)^3 n^3) time},
+	Date-Added = {2017-11-25 23:30:33 +0000},
+	Date-Modified = {2017-11-25 23:44:58 +0000},
+	Doi = {10.1016/S0304-3975(00)00049-9},
+	Journal = {Theoret. Comput. Sci.},
+	Keywords = {CFG reachability},
+	Number = {1--2},
+	Pages = {29--98},
+	Read = {1},
+	Title = {Interconvertibility of a class of set constraints and context-free-language reachability},
+	Volume = {248},
+	Year = {2000},
+	Bdsk-Url-1 = {https://dx.doi.org/10.1016/S0304-3975(00)00049-9}}
+
+@inproceedings{y-gmdt-90,
+	Author = {Yannakakis, Mihalis},
+	Booktitle = {Proc. 9th ACM SIGACT-SIGMOD-SIGART Symp. Principles Database Syst.},
+	Comments = {O(n^3) time for fixed grammar},
+	Date-Added = {2017-11-25 23:04:25 +0000},
+	Date-Modified = {2017-11-25 23:44:50 +0000},
+	Doi = {10.1145/298514.298576},
+	Keywords = {CFG reachability},
+	Pages = {230--242},
+	Read = {1},
+	Title = {Graph-theoretic methods in database theory},
+	Year = {1990},
+	Bdsk-Url-1 = {https://dx.doi.org/10.1145/298514.298576}}
+
 @article{bjm-flcpp-00,
 	Author = {Barrett, Chris and Jacob, Riko and Marathe, Madhav},
+	Comments = {O(n^3 NP) timex},
 	Date-Added = {2017-09-28 01:34:21 +0000},
-	Date-Modified = {2017-09-28 01:36:15 +0000},
+	Date-Modified = {2017-11-25 23:45:17 +0000},
 	Doi = {10.1137/S0097539798337716},
 	Journal = {SIAM J. Comput.},
-	Keywords = {CFG shortest paths in O(n^3 NP) time},
+	Keywords = {CFG shortest paths},
 	Number = {3},
 	Pages = {809--837},
 	Read = {1},
 	Title = {Formal-language-constrained path problems},
 	Volume = {30},
-	Year = {2000}}
+	Year = {2000},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1137/S0097539798337716}}
 
 @article{c-sarsm-08,
 	Author = {Chaudhuri, Swarat},
