--- a/optimization.bib
+++ b/optimization.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2017-10-15 12:41:56 -0500 
+%% Created for Jeff Erickson at 2017-11-03 16:14:24 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -1827,10 +1827,10 @@
 	Year = {1986}}
 
 @inproceedings{ls-mcsc-11,
-	Author = {Łącki, Jakub and Sankowski, Piotr},
+	Author = {\L{}ącki, Jakub and Sankowski, Piotr},
 	Booktitle = {Proc. 19th Ann. Europ. Symp. Algorithms},
 	Date-Added = {2011-08-05 13:06:12 -0500},
-	Date-Modified = {2014-04-03 00:37:47 +0000},
+	Date-Modified = {2017-11-03 21:14:23 +0000},
 	Editor = {Demetrescu, Camil and Halldórsson, Magnús M.},
 	Pages = {155--166},
 	Publisher = {Springer},
@@ -3020,7 +3020,8 @@ Memorandum RM-1573, The RAND Corporation, Santa Monica, California, [October 24,
 	Read = {1},
 	Title = {Approximation algorithms for {NP}-complete problesm on planar graphs},
 	Volume = {41},
-	Year = {1994}}
+	Year = {1994},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1145/174644.174650}}
 
 @inproceedings{hw-ltaip-74,
 	Author = {Hopcroft, John E. and Wong, J. K.},
