--- a/algorithms.bib
+++ b/algorithms.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2018-02-10 18:15:43 -0600 
+%% Created for Jeff Erickson at 2018-07-02 15:38:09 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -18,7 +18,8 @@
 	School = {Oregon St. Univ.},
 	Title = {The shortest strings in a context-free langauge},
 	Url = {http://ir.library.oregonstate.edu/concern/graduate_thesis_or_dissertations/9z903315x},
-	Year = {1978}}
+	Year = {1978},
+	Bdsk-Url-1 = {http://ir.library.oregonstate.edu/concern/graduate_thesis_or_dissertations/9z903315x}}
 
 @misc{gr-cpqws-17,
 	Arxiv = {1612.08872v2},
@@ -42,7 +43,8 @@
 	Read = {1},
 	Title = {Subgraph Queries by Context-free Grammars},
 	Volume = {5},
-	Year = {2008}}
+	Year = {2008},
+	Bdsk-Url-1 = {https://doi.org/10.1515/jib-2008-100}}
 
 @misc{h-qpguc-16,
 	Arxiv = {1502.02242v2},
@@ -64,13 +66,14 @@
 	Pages = {119--130},
 	Read = {1},
 	Title = {Conjunctive Context-Free Path Queries},
-	Year = {2014}}
+	Year = {2014},
+	Bdsk-Url-1 = {https://doi.org/10.5441/002/icdt.2014.15}}
 
 @inproceedings{mj-afsts-75,
-	Author = {Mclean, Michael J. and Johnston, Daniel B.},
+	Author = {McLean, Michael J. and Johnston, Daniel B.},
 	Booktitle = {Combaintorial Mathematics~{III}},
 	Date-Added = {2018-02-10 22:27:48 +0000},
-	Date-Modified = {2018-02-10 22:32:56 +0000},
+	Date-Modified = {2018-07-02 20:38:04 +0000},
 	Doi = {10.1007/BFb0069557},
 	Number = {452},
 	Pages = {180--196},
@@ -78,7 +81,8 @@
 	Read = {1},
 	Series = {Lecture Notes Math.},
 	Title = {An algorithm for finding the shortest terminal strings which can be produced from non-terminals in context-free grammars},
-	Year = {1975}}
+	Year = {1975},
+	Bdsk-Url-1 = {https://doi.org/10.1007/BFb0069557}}
 
 @article{mr-icccr-00,
 	Author = {Melski, David and Reps, Thomas},
