--- a/compgeom.bib
+++ b/compgeom.bib
@@ -2,12 +2,26 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2017-10-15 11:27:55 -0500 
+%% Created for Jeff Erickson at 2018-05-02 18:45:21 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{r-odtr-94,
+	Author = {Rajan, V. T.},
+	Date-Added = {2018-05-02 23:35:04 +0000},
+	Date-Modified = {2018-05-02 23:45:17 +0000},
+	Doi = {10.1007/BF02574375},
+	Journal = {Discrete Comput. Geom.},
+	Number = {2},
+	Pages = {189--202},
+	Read = {1},
+	Title = {Optimality of the {Delaunay} Triangulation in {$\mathbb{R}^d$}},
+	Volume = {12},
+	Year = {1994},
+	Bdsk-Url-1 = {https://doi.org/10.1007/BF02574375}}
 
 @article{dg-cop3d-97,
 	Author = {Das, Gautam and Goodrich, Michael T.},
@@ -20,7 +34,8 @@
 	Read = {1},
 	Title = {On the complexity of optimization problems for 3-dimensional convex polyhedra and decisiosn trees},
 	Volume = {8},
-	Year = {1997}}
+	Year = {1997},
+	Bdsk-Url-1 = {https://doi.org/10.1016/S0925-7721(97)00006-0}}
 
 @article{g-pmcbh-60,
 	Author = {Grünbaum, Branko},
@@ -199,8 +214,8 @@
 @article{ist-dcgm-13,
 	Author = {Ishaque, Mashhood and Souvaine, Diane L. and Tóth, Csaba D.},
 	Date-Added = {2014-07-20 15:23:40 +0000},
-	Date-Modified = {2014-07-20 15:23:40 +0000},
-	Journal = {Discrete and Computational Geometry},
+	Date-Modified = {2018-05-02 23:44:37 +0000},
+	Journal = {Discrete Comput. Geom.},
 	Number = {1},
 	Pages = {89--131},
 	Title = {Disjoint Compatible Geometric Matchings},
