--- a/jeffe.bib
+++ b/jeffe.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2017-01-02 17:41:38 -0600 
+%% Created for Jeff Erickson at 2018-06-27 17:05:48 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -21,14 +21,14 @@
 	Author = {Chang, Hsien-Chih and Erickson, Jeff},
 	Howpublished = {Preprint},
 	Title = {Electrically Reducing Planar Networks},
-	Year = {2017}}	
-	
+	Year = {2017}}
+
 @misc{annular,
 	Author = {Chang, Hsien-Chih and Erickson, Jeff},
 	Howpublished = {Accepted to Computational Geometry: Young Researchers Forum, Proc. 33rd Int. Symp. Comput. Geom.},
 	Title = {Unwinding Annular Curves and Electrically Reducing Planar Networks},
 	Year = {2017}}
-	
+
 @inproceedings{repcube,
 	Author = {Abel, Zachary and Ballinger, Brad and Demaine, Erik D. and Demaine, Martin L. and Erickson, Jeff and Hesterberg, Adam and Ito, Hiro and Kostitsyna, Irina and Lynch, Jayson and Uehara, Ryuhei},
 	Booktitle = {Abstracts 19th Japan Conf. Discrete Comput. Geom., Graphs, Games},
@@ -40,7 +40,7 @@
 	Year = {2016}}
 
 @inproceedings{fastweak,
-	Author = {Akitaya, Hugo and Aloupis, Greg and Erickson, Jeff and T{\'o}th, Csaba},
+	Author = {Akitaya, Hugo and Aloupis, Greg and Erickson, Jeff and Tóth, Csaba},
 	Booktitle = {Proc. 32nd Int. Symp. Comput. Geom.},
 	Date-Added = {2017-01-02 23:37:08 +0000},
 	Date-Modified = {2017-01-02 23:41:12 +0000},
@@ -413,12 +413,12 @@
 @misc{notes,
 	Author = {Erickson, Jeff},
 	Date-Added = {2008-12-12 04:49:03 -0600},
-	Date-Modified = {2013-11-08 19:39:24 +0000},
-	Month = {December},
-	Note = {Lecture notes with exercises, 432 pages},
-	Title = {Algorithms {Course} {Materials}},
-	Url = {http://www.cs.uiuc.edu/~jeffe/teaching/algorithms},
-	Year = {2013},
+	Date-Modified = {2018-06-27 22:05:44 +0000},
+	Month = {January},
+	Note = {Course materials, 1250 pages},
+	Title = {Algorithms, Etc.},
+	Url = {https://jeffe.cs.illinois.edu/teaching/algorithms},
+	Year = {2015},
 	Bdsk-Url-1 = {http://www.cs.uiuc.edu/~jeffe/teaching/algorithms}}
 
 @article{shri-adaptive,
