--- a/optimization.bib
+++ b/optimization.bib
@@ -2,12 +2,105 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2017-11-03 16:14:24 -0500 
+%% Created for Jeff Erickson at 2018-07-01 17:57:06 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{ko-rscdpgrip-91,
+	Author = {Kodialam, Muralidharan and Orlin, James B.},
+	Booktitle = {Proc. 2nd Ann. ACM-SIAM Symp. Discrete Algorithms},
+	Date-Added = {2018-07-01 22:45:06 +0000},
+	Date-Modified = {2018-07-01 22:45:51 +0000},
+	Pages = {131--135},
+	Title = {Recognizing Strong Connectivity in (Dynamic) Periodic Graphs and Its Relation to Integer Programming},
+	Year = {1991}}
+
+@incollection{o-spdg-84,
+	Author = {Orlin, James B.},
+	Booktitle = {Progress in Combinatorial Optimization},
+	Date-Added = {2018-07-01 22:18:03 +0000},
+	Date-Modified = {2018-07-01 22:20:09 +0000},
+	Editor = {Pulleyblank, William R.},
+	Pages = {273--294},
+	Publisher = {Academic Press},
+	Title = {Some problems on dynamic/periodic graphs},
+	Year = {1984}}
+
+@article{fhl-iaamw-08,
+	Author = {Feige, Uriel and Hajiaghayi, MohammadTaghi and Lee, James R.},
+	Date-Added = {2018-06-29 18:14:51 +0000},
+	Date-Modified = {2018-06-29 18:15:56 +0000},
+	Journal = {SIAM J. Comput.},
+	Number = {2},
+	Pages = {629--657},
+	Title = {Improved Approximation Algorithms for Minimum Weight Vertex Separators},
+	Volume = {38},
+	Year = {2008}}
+
+@article{a-aat-10,
+	Author = {Amir, Eyal},
+	Date-Added = {2018-06-29 18:12:19 +0000},
+	Date-Modified = {2018-06-29 18:13:37 +0000},
+	Doi = {10.1007/s00453-008-9180-4},
+	Journal = {Algorithmica},
+	Number = {4},
+	Pages = {448--479},
+	Title = {Approximation algorithms for treewidth},
+	Volume = {56},
+	Year = {2010},
+	Bdsk-Url-1 = {https://doi.org/10.1007/s00453-008-9180-4}}
+
+@article{bghk-atpfm-05,
+	Author = {Bodlaender, Hans L. and Gilbert, John R. and Hafsteinson, Hjálmýtr and Kloks, Ton},
+	Date-Added = {2018-06-29 17:54:00 +0000},
+	Date-Modified = {2018-06-29 17:56:23 +0000},
+	Doi = {10.1006/jagm.1995.1009},
+	Journal = {J. Algorithms},
+	Number = {2},
+	Pages = {238--255},
+	Title = {Approximating treewidth, pathwidth, frontsize, and shortest elimination treehortest Elimination Tree},
+	Volume = {18},
+	Year = {2005},
+	Bdsk-Url-1 = {https://doi.org/10.1006/jagm.1995.1009}}
+
+@inproceedings{bddfl-5at-13,
+	Arxiv = {1304.6321},
+	Author = {Bodlaender, Hans L. and Drange, Pål Grønås and Dregi, Markus S. and Fomin, Fedor V. and Lokshtanov, Daniel and Pilipczuk, Michał},
+	Booktitle = {Proc. 54th Ann. IEEE Symp. Found. Comput.},
+	Date-Added = {2018-06-29 17:14:34 +0000},
+	Date-Modified = {2018-06-29 18:09:50 +0000},
+	Doi = {10.1109/FOCS.2013.60},
+	Pages = {499--508},
+	Title = {A {$c^kn$} 5-Approximation Algorithm for Treewidth},
+	Year = {2013},
+	Bdsk-Url-1 = {https://doi.org/10.1109/FOCS.2013.60}}
+
+@article{b-ltaft-96,
+	Author = {Bodlaender, Hans L.},
+	Date-Added = {2018-06-29 16:34:58 +0000},
+	Date-Modified = {2018-06-29 17:14:07 +0000},
+	Doi = {10.1137/S0097539793251219},
+	Journal = {SIAM J. Comput.},
+	Number = {6},
+	Pages = {1305--1317},
+	Title = {A linear-time algorithm for finding tree-decompositions of small treewidth},
+	Volume = {25},
+	Year = {1996},
+	Bdsk-Url-1 = {https://doi.org/10.1137/S0097539793251219}}
+
+@article{acp-cfek-87,
+	Author = {Arnborg, Stefan and Corneil, Derek G. and Proskurowski, Andrzej},
+	Date-Added = {2018-06-29 16:31:46 +0000},
+	Date-Modified = {2018-06-29 17:14:26 +0000},
+	Journal = {SIAM J. Alg. Discrete Methods},
+	Number = {2},
+	Pages = {277--284},
+	Title = {Complexity of finding embeddings in a $k$-tree},
+	Volume = {8},
+	Year = {1987}}
 
 @article{hp-lbdpp-02,
 	Author = {van der Holst, Hein and de Pina, Jos{\'{e}} Coelho},
