--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,171 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2018-02-27 08:45:55 -0600 
+%% Created for Jeff Erickson at 2018-07-04 11:11:58 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{cdehv-dcatd-08,
+	Author = {Chepoi, Victor and Dragan, Feodor and Estellon, Bertrand and Habib, Michel and Vaxès, Yann},
+	Booktitle = {Proc. 24th Ann. Symp. Comput. Geom.},
+	Comments = {treelength ≤ δ ⇒ δ-hyperbolic ⇒ treelength ≤ O(δ log n)},
+	Date-Added = {2018-07-03 21:51:49 +0000},
+	Date-Modified = {2018-07-03 22:02:54 +0000},
+	Doi = {10.1145/1377676.1377687},
+	Pages = {59--68},
+	Title = {Diameters, centers, and approximating trees of {$\delta$}-hyperbolic geodesic spaces and graphs},
+	Year = {2008},
+	Bdsk-Url-1 = {https://doi.org/10.1145/1377676.1377687}}
+
+@article{a-cgvfg-11,
+	Arxiv = {0911.2177},
+	Author = {Antolin, Yago},
+	Date-Added = {2018-07-03 21:32:18 +0000},
+	Date-Modified = {2018-07-03 21:34:48 +0000},
+	Doi = {10.1515/gcc.2011.012},
+	Journal = {Groups, Complexity, Cryptology},
+	Number = {2},
+	Pages = {301--327},
+	Title = {On [Cayley] graphs of virtually free groups},
+	Volume = {3},
+	Year = {2011},
+	Bdsk-Url-1 = {https://doi.org/10.1515/gcc.2011.012}}
+
+@article{dw-cgtst-13,
+	Arxiv = {1202.3276},
+	Author = {Diekert, Volker and Weiß, Armin},
+	Date-Added = {2018-07-03 21:26:35 +0000},
+	Date-Modified = {2018-07-03 21:32:05 +0000},
+	Doi = {10.1142/S0218196713500124},
+	Journal = {Int. J. Alg. Comput.},
+	Number = {3},
+	Pages = {611--642},
+	Read = {1},
+	Title = {Context-Free Groups and Their Structure Trees},
+	Volume = {23},
+	Year = {2013},
+	Bdsk-Url-1 = {https://doi.org/10.1142/S0218196713500124}}
+
+@article{kl-lacgc-04,
+	Author = {Kuske, Dietrich and Lohrey, Markus},
+	Comments = {context-free word problem = Cayley graph with finite treewidth},
+	Date-Added = {2018-07-03 21:13:45 +0000},
+	Date-Modified = {2018-07-03 21:15:38 +0000},
+	Doi = {10.1016/j.apal.2004.06.002},
+	Journal = {Ann. Pure APpl. Logic},
+	Number = {1--3},
+	Pages = {263--286},
+	Title = {Logical aspects of {Cayley}-graphs: {The} group case},
+	Volume = {131},
+	Year = {2004},
+	Bdsk-Url-1 = {https://doi.org/10.1016/j.apal.2004.06.002}}
+
+@article{bc-sngsh-02,
+	Abstract = {Extending the analogous result of Cannon and Wagreich for the fundamental groups of surfaces, we show that, for the ℓ-regular graphs                                                                           {\$}{\$}{\backslash}mathcal{\{}X{\}}{\_}{\{}{\backslash}ell ,m{\}} {\$}{\$}                 associated to regular tessellations of the hyperbolic plane by m-gons, the denominators of the growth series (which are rational and were computed by Floyd and Plotnick) are reciprocal Salem polynomials. As a consequence, the growth rates of these graphs are Salem numbers. We also prove that these denominators are essentially irreducible (they have a factor of X + 1 when m ≡ 2 mod 4; and when ℓ = 3 and m ≡ 4 mod 12, for instance, they have a factor of X2 − X + 1). We then derive some regularity properties for the coefficients f                  n                 of the growth series: they satisfy K$\lambda$                  n                 − R < f                  n                 < K$\lambda$                  n                 + R for some constants K, R < 0, $\lambda$ < 1.},
+	Author = {Barthold, Laurent and Ceccherini-Silberstein, Tullio G.},
+	Date-Added = {2018-07-02 18:54:51 +0000},
+	Date-Modified = {2018-07-02 18:55:14 +0000},
+	Doi = {10.1023/A:1014902918849},
+	Journal = {Geom. Dedicata},
+	Number = {1},
+	Pages = {107--114},
+	Title = {Salem Numbers and Growth Series of Some Hyperbolic Graphs},
+	Volume = {90},
+	Year = {2002},
+	Bdsk-Url-1 = {https://doi.org/10.1023/A:1014902918849}}
+
+@article{fp-gffge-87,
+	Author = {Floyd, William J. and Plotnick, Steven J.},
+	Date-Added = {2018-07-02 18:47:27 +0000},
+	Date-Modified = {2018-07-02 18:50:56 +0000},
+	Doi = {10.1007/BF01405088},
+	Journal = {Invent. Math.},
+	Number = {1},
+	Pages = {1--29},
+	Title = {Growth functions on {Fuchsian} groups and the {Euler} characteristic},
+	Url = {http://eudml.org/doc/143441},
+	Volume = {88},
+	Year = {1987},
+	Bdsk-Url-1 = {http://eudml.org/doc/143441},
+	Bdsk-Url-2 = {https://doi.org/10.1007/BF01405088}}
+
+@article{m-ncfg-68,
+	Author = {Milnor, John},
+	Date-Added = {2018-07-02 18:35:59 +0000},
+	Date-Modified = {2018-07-02 18:36:38 +0000},
+	Doi = {10.4310/jdg/1214501132},
+	Journal = {J. Diff. Geom.},
+	Number = {1},
+	Pages = {1--7},
+	Read = {1},
+	Title = {A note on curvature and the fundamental group},
+	Volume = {2},
+	Year = {1968},
+	Bdsk-Url-1 = {https://doi.org/10.4310/jdg/1214501132}}
+
+@article{cw-gfsg-92,
+	Author = {Cannon, James W. and Wagreich, Philip},
+	Date-Added = {2018-07-02 18:14:41 +0000},
+	Date-Modified = {2018-07-02 18:53:46 +0000},
+	Doi = {10.1007/BF01444714},
+	Journal = {Math. Ann.},
+	Number = {1},
+	Pages = {239--257},
+	Read = {1},
+	Title = {Growth functions of surface groups},
+	Volume = {293},
+	Year = {1992},
+	Bdsk-Url-1 = {https://doi.org/10.1007/BF01444714}}
+
+@inproceedings{a-gfa-91,
+	Author = {Alonso, Juan M.},
+	Booktitle = {Arboreal group theory},
+	Date-Added = {2018-07-02 17:13:31 +0000},
+	Date-Modified = {2018-07-02 18:52:16 +0000},
+	Doi = {10.1007/978-1-4612-3142-4_1},
+	Editor = {Alperin, Roger C.},
+	Number = {19},
+	Publisher = {Springer},
+	Series = {Math. Sci. Res. Inst. Pub.},
+	Title = {Growth functions of amalgams},
+	Year = {1991},
+	Bdsk-Url-1 = {https://doi.org/10.1007/978-1-4612-3142-4_1}}
+
+@article{gh-prges-97,
+	Author = {Grigorichuk, Rostislav and de la Harpe, Pierre},
+	Date-Added = {2018-07-02 15:55:32 +0000},
+	Date-Modified = {2018-07-02 18:52:49 +0000},
+	Doi = {10.1007/BF02471762},
+	Journal = {J. Dynam. Control Systems},
+	Number = {1},
+	Pages = {51--89},
+	Title = {On problems related to growth, entropy and spectrum in group theory},
+	Volume = {3},
+	Year = {1997},
+	Bdsk-Url-1 = {https://doi.org/10.1007/BF02471762}}
+
+@book{h-tggt-00,
+	Author = {de la Harpe, Pierre},
+	Date-Added = {2018-07-02 15:28:44 +0000},
+	Date-Modified = {2018-07-02 15:33:45 +0000},
+	Publisher = {Univ. Chicago Press},
+	Read = {1},
+	Series = {Chicago Lect. Math.},
+	Title = {Topics in Geometric Group Theory},
+	Year = {2000}}
+
+@misc{ms-ac3mt-15,
+	Arxiv = {1512.04648},
+	Author = {Maria, Clément and Spreer, Jonathan},
+	Date-Added = {2018-07-01 02:43:36 +0000},
+	Date-Modified = {2018-07-01 02:47:31 +0000},
+	Howpublished = {Preprint},
+	Month = {December},
+	Title = {Admissible colourings of 3-manifold triangulations for {Turaev}-{Viro} type invariants},
+	Year = {2015}}
 
 @article{bj-pcc3crm-03,
 	Author = {Berg, Alex R. and Jordán, Tibor},
@@ -20,7 +179,8 @@
 	Read = {1},
 	Title = {A proof of {Connelly’s} conjecture on 3-connected circuits of the rigidity matroid},
 	Volume = {88},
-	Year = {2003}}
+	Year = {2003},
+	Bdsk-Url-1 = {https://doi.org/10.1016/S0095-8956(02)00037-0}}
 
 @article{horss-pmrgp-05,
 	Author = {Haas, Ruth and Orden, David and Rote, Günter and Santos, Fransisco and Servatius, Brigitte and Servatius, Herman and Souvaine, Diane and Streinu, Ileana and Whiteley, Walter},
@@ -33,7 +193,8 @@
 	Read = {1},
 	Title = {Planar minimally rigid graphs and pseudo-triangulations},
 	Volume = {31},
-	Year = {2005}}
+	Year = {2005},
+	Bdsk-Url-1 = {https://doi.org/10.1016/j.comgeo.2004.07.003}}
 
 @article{ms-gtecl-83,
 	Author = {Muller, David E. and Schupp, Paul E.},
@@ -5079,16 +5240,6 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Title = {Note: Combinatorial {Alexander} duality---A short and elementary proof},
 	Volume = {42},
 	Year = {2009}}
-
-@misc{f-sncdu-12,
-	Author = {Fox, Kyle},
-	Date-Added = {2012-07-02 22:32:16 +0000},
-	Date-Modified = {2012-07-02 22:34:03 +0000},
-	Howpublished = {Unpublished manuscript},
-	Month = {July},
-	Read = {1},
-	Title = {Shortest non-trivial cycles in directed and undirected surface graphs},
-	Year = {2012}}
 
 @inproceedings{en-mcsnc-11,
 	Author = {Erickson, Jeff and Nayyeri, Amir},
