--- a/jeffe.bib
+++ b/jeffe.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2018-06-27 17:05:48 -0500 
+%% Created for Jeff Erickson at 2018-07-04 11:50:00 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -10,6 +10,18 @@
 
 @string{jeffe = {Jeff Erickson}}
 
+
+@inproceedings{holiest,
+	Arxiv = {1804.01045},
+	Author = {Erickson, Jeff and Fox, Kyle and Lkhamsuren, Luvsandondov},
+	Booktitle = {Proc. 50th Ann. ACM Symp. Theory Comput.},
+	Date-Added = {2018-07-04 16:47:59 +0000},
+	Date-Modified = {2018-07-04 16:50:00 +0000},
+	Doi = {10.1145/3188745.3188904},
+	Pages = {1319--1332},
+	Read = {1},
+	Title = {Holiest minimum-cost paths and flows in surface graphs},
+	Year = {2018}}
 
 @misc{untangle,
 	Author = {Chang, Hsien-Chih and Erickson, Jeff and de Mesmay, Arnaud and Letscher, David and Schleimer, Saul and Sedgwick, Eric and Thurston, Dylan and Tillmann, Stephan},
