--- a/jeffe.bib
+++ b/jeffe.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2018-07-04 11:50:00 -0500 
+%% Created for Jeff Erickson at 2018-07-04 17:10:45 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -21,12 +21,15 @@
 	Pages = {1319--1332},
 	Read = {1},
 	Title = {Holiest minimum-cost paths and flows in surface graphs},
-	Year = {2018}}
+	Year = {2018},
+	Bdsk-Url-1 = {https://doi.org/10.1145/3188745.3188904}}
 
-@misc{untangle,
+@inproceedings{untangle,
 	Author = {Chang, Hsien-Chih and Erickson, Jeff and de Mesmay, Arnaud and Letscher, David and Schleimer, Saul and Sedgwick, Eric and Thurston, Dylan and Tillmann, Stephan},
-	Howpublished = {Preprint},
-	Title = {Untangling Curves on Surfaces via Local Moves},
+	Booktitle = {Proc. 29th Ann. ACM-SIAM Symp. Discrete Algorithms},
+	Date-Modified = {2018-07-04 22:10:45 +0000},
+	Pages = {121--135},
+	Title = {Tightening Curves on Surfaces via Local Moves},
 	Year = {2017}}
 
 @misc{electrical,
