--- a/topology.bib
+++ b/topology.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2018-07-04 17:08:07 -0500 
+%% Created for Jeff Erickson at 2018-07-05 11:21:00 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -25,12 +25,12 @@
 	Arxiv = {0911.2177},
 	Author = {Antolin, Yago},
 	Date-Added = {2018-07-03 21:32:18 +0000},
-	Date-Modified = {2018-07-03 21:34:48 +0000},
+	Date-Modified = {2018-07-05 16:20:59 +0000},
 	Doi = {10.1515/gcc.2011.012},
 	Journal = {Groups, Complexity, Cryptology},
 	Number = {2},
 	Pages = {301--327},
-	Title = {On [Cayley] graphs of virtually free groups},
+	Title = {On {Cayley} graphs of virtually free groups},
 	Volume = {3},
 	Year = {2011},
 	Bdsk-Url-1 = {https://doi.org/10.1515/gcc.2011.012}}
