--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,62 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2018-07-05 11:21:00 -0500 
+%% Created for Jeff Erickson at 2018-07-06 11:46:59 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{mnnw-mdpgo-18,
+	Arxiv = {1512.02068},
+	Author = {Mozes, Shay and Nikolaev, Kirill and Nussbaum, Yahav and Weimann, Oren},
+	Booktitle = {Proc. 29th Ann. ACM-SIAM Symp. Discrete Algorithms},
+	Date-Added = {2018-07-06 16:44:37 +0000},
+	Date-Modified = {2018-07-06 16:46:59 +0000},
+	Doi = {10.1137/1.9781611975031.32},
+	Pages = {477--494},
+	Title = {Minimum Cut of Directed Planar Graphs in {$O(n\log\log n)$} Time},
+	Year = {2018}}
+
+@article{ll-mcscd-17,
+	Arxiv = {1703.07964},
+	Author = {Liang, Hung-Chun and Lu, Hsueh-I},
+	Date-Added = {2018-07-06 16:41:04 +0000},
+	Date-Modified = {2018-07-06 16:42:41 +0000},
+	Doi = {10.1137/16M1057152},
+	Journal = {SIAM J. Discrete Math.},
+	Number = {1},
+	Pages = {454--476},
+	Title = {Minimum Cuts and Shortest Cycles in Directed Planar Graphs via Noncrossing Shortest Paths},
+	Volume = {31},
+	Year = {2017}}
+
+@article{p-nhcpp-79,
+	Author = {Plesník, Ján},
+	Date-Added = {2018-07-05 22:56:05 +0000},
+	Date-Modified = {2018-07-05 22:57:15 +0000},
+	Doi = {10.1016/0020-0190(79)90023-1},
+	Journal = {Inf. Proc. Letters},
+	Number = {4},
+	Pages = {199--201},
+	Title = {The {NP}-Completeness of the {Hamiltonian} Cycle Problem in Planar Digraphs with Degree Bound Two},
+	Volume = {8},
+	Year = {1979},
+	Bdsk-Url-1 = {https://doi.org/10.1016/0020-0190(79)90023-1}}
+
+@article{ips-hpgg-82,
+	Author = {Itai, Alon and Papadimitriou, Christos H. and Szwarcfiter, Jayme Luiz},
+	Date-Added = {2018-07-05 22:52:26 +0000},
+	Date-Modified = {2018-07-05 23:06:07 +0000},
+	Doi = {10.1137/0211056},
+	Journal = {SIAM J. Comput.},
+	Number = {4},
+	Pages = {676--686},
+	Title = {Hamilton paths in grid graphs},
+	Volume = {11},
+	Year = {1982},
+	Bdsk-Url-1 = {https://doi.org/10.1137/0211056}}
 
 @inproceedings{cdehv-dcatd-08,
 	Author = {Chepoi, Victor and Dragan, Feodor and Estellon, Bertrand and Habib, Michel and Vaxès, Yann},
