--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,59 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2018-07-06 11:46:59 -0500 
+%% Created for Jeff Erickson at 2018-07-07 17:02:10 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{kk-totcb-93,
+	Author = {Kao, Ming-Yang and Klein, Philip N.},
+	Date-Added = {2018-07-07 21:55:48 +0000},
+	Date-Modified = {2018-07-07 22:02:10 +0000},
+	Doi = {10.1016/0022-0000(93)90042-U},
+	Journal = {J. Comput. Syst. Sci.},
+	Number = {3},
+	Pages = {459--500},
+	Title = {Toward overcoming the transitive-closure bottleneck: {Efficient} parallel algorithms for planar digraphs},
+	Volume = {47},
+	Year = {1993}}
+
+@article{k-lpapd1-93,
+	Author = {Kao, Ming-Yang},
+	Date-Added = {2018-07-07 21:52:23 +0000},
+	Date-Modified = {2018-07-07 21:53:22 +0000},
+	Doi = {10.1137/0222032},
+	Journal = {SIAM J. Comput.},
+	Number = {3},
+	Pages = {431--459},
+	Title = {Linear-processor {NC} algorithms for planar directed graphs {I}: {Strongly} connected components},
+	Volume = {22},
+	Year = {1993}}
+
+@article{ks-lpapd2-93,
+	Author = {Kao, Ming-Yang and Shannon, Gregory E.},
+	Date-Added = {2018-07-07 21:50:17 +0000},
+	Date-Modified = {2018-07-07 21:51:29 +0000},
+	Doi = {10.1137/0222033},
+	Journal = {SIAM J. Comput.},
+	Number = {3},
+	Pages = {460--481},
+	Title = {Linear-processor {NC} algorithms for planar directed graphs {II}: {Directed} spanning trees},
+	Volume = {22},
+	Year = {1993}}
+
+@inproceedings{ks-lrgop-89,
+	Author = {Kao, Ming-Yang and Shannon, Gregory E.},
+	Booktitle = {Proc. 21st Ann. ACM Symp. Theory Comput.},
+	Comments = {"Folklore:" planar graph is strongly connected iff dual is acyclic},
+	Date-Added = {2018-07-07 21:45:15 +0000},
+	Date-Modified = {2018-07-07 21:50:14 +0000},
+	Doi = {10.1145/73007.73034},
+	Pages = {286--296},
+	Title = {Local reorientation, global order, and planar topology},
+	Year = {1989}}
 
 @inproceedings{mnnw-mdpgo-18,
 	Arxiv = {1512.02068},
@@ -18,7 +65,8 @@
 	Doi = {10.1137/1.9781611975031.32},
 	Pages = {477--494},
 	Title = {Minimum Cut of Directed Planar Graphs in {$O(n\log\log n)$} Time},
-	Year = {2018}}
+	Year = {2018},
+	Bdsk-Url-1 = {https://doi.org/10.1137/1.9781611975031.32}}
 
 @article{ll-mcscd-17,
 	Arxiv = {1703.07964},
@@ -31,7 +79,8 @@
 	Pages = {454--476},
 	Title = {Minimum Cuts and Shortest Cycles in Directed Planar Graphs via Noncrossing Shortest Paths},
 	Volume = {31},
-	Year = {2017}}
+	Year = {2017},
+	Bdsk-Url-1 = {https://doi.org/10.1137/16M1057152}}
 
 @article{p-nhcpp-79,
 	Author = {Plesník, Ján},
@@ -249,9 +298,9 @@
 @article{ms-gtecl-83,
 	Author = {Muller, David E. and Schupp, Paul E.},
 	Date-Added = {2017-11-25 17:44:32 +0000},
-	Date-Modified = {2017-11-25 17:45:41 +0000},
+	Date-Modified = {2018-07-07 21:57:12 +0000},
 	Doi = {10.1016/0022-0000(83)90003-X},
-	Journal = {J. Comput. Syst. Sci.},
+	Journal = {J. Comput. System Sci.},
 	Number = {3},
 	Pages = {295--310},
 	Read = {1},
@@ -1076,9 +1125,10 @@
 @misc{s-sigpv-16,
 	Arxiv = {1609.03727},
 	Author = {Skopenkov, Arkadiy},
+	Date-Modified = {2018-07-07 21:58:57 +0000},
 	Howpublished = {Preprint},
 	Month = {Sep},
-	Title = {Stability of intersections of graphs in the plane and the van Kampen obstruction},
+	Title = {Stability of intersections of graphs in the plane and the van {Kampen} obstruction},
 	Year = {2016}}
 
 @misc{f-egeg-16,
@@ -1092,6 +1142,7 @@
 @misc{at-rwspt-16,
 	Arxiv = {1610.00361},
 	Author = {Hugo A. Akitaya, Csaba D. Tóth},
+	Date-Modified = {2018-07-07 21:58:28 +0000},
 	Howpublished = {Preprint},
 	Month = {Oct},
 	Title = {Reconstruction of weakly simple polygons from their edges},
@@ -1102,6 +1153,7 @@
 	Author = {Skopenkov, Arkadiy},
 	Booktitle = {Surveys in Contemporary Mathematics},
 	Comments = {proof of deformation retract of simplicial deleted product},
+	Date-Modified = {2018-07-07 21:59:26 +0000},
 	Editor = {Young, Nicholas and Choi, Yemon},
 	Pages = {248--342},
 	Publisher = {Cambridge: Cambridge University Press},
@@ -1111,8 +1163,11 @@
 	Year = {2007}}
 
 @inproceedings{m-vkoir-09,
+	Arxiv = {math/0612082},
 	Author = {Melikhov, Sergey A.},
 	Booktitle = {Proceedings of the Steklov Institute of Mathematics},
+	Date-Modified = {2018-07-07 22:00:44 +0000},
+	Doi = {10.1134/S0081543809030092},
 	Number = {1},
 	Pages = {142--176},
 	Publisher = {Springer},
@@ -1379,6 +1434,8 @@
 
 @article{rst-tec-97,
 	Author = {Robertson, Neil and Seymour, Paul D. and Thomas, Robin},
+	Date-Modified = {2018-07-07 22:01:12 +0000},
+	Doi = {10.1006/jctb.1997.1752},
 	Journal = {J. Comb. Theory Ser. B},
 	Number = {1},
 	Pages = {166--183},
@@ -3759,12 +3816,13 @@ Theorem 2. Suppose G is a critical circular planar resistor network.  The values
 @article{cnao-laepg-85,
 	Author = {Chiba, Norishige and Nishizeki, Takao and Abe, Shigenobu and Ozawa, Takao},
 	Date-Added = {2014-07-20 15:26:41 +0000},
-	Date-Modified = {2017-06-21 15:45:54 +0000},
-	Journal = {J. Comput. Syst. Sci.},
+	Date-Modified = {2018-07-07 21:57:37 +0000},
+	Doi = {10.1016/0022-0000(85)90004-2},
+	Journal = {J. Comput. System Sci.},
 	Number = {1},
 	Pages = {54--76},
 	Read = {1},
-	Title = {A Linear Algorithm for Embedding Planar Graphs Using PQ-trees},
+	Title = {A Linear Algorithm for Embedding Planar Graphs Using {PQ}-trees},
 	Volume = {30},
 	Year = {1985}}
 
