--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,34 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2018-07-07 17:02:10 -0500 
+%% Created for Jeff Erickson at 2018-07-08 16:23:35 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{atz-itspd-03,
+	Author = {Arge, Lars and Toma, Laura and Zeh, Norbert},
+	Booktitle = {Proc. 15th Ann. ACM Aymp. Parallel Algorithms Arch.},
+	Date-Added = {2018-07-08 21:21:21 +0000},
+	Date-Modified = {2018-07-08 21:23:34 +0000},
+	Doi = {10.1145/777412.777427},
+	Pages = {85--93},
+	Title = {{I/O}-efficient topological sorting of planar {DAGs}},
+	Year = {2003}}
+
+@article{ry-fcppg-94,
+	Author = {Ramachandran, Vijaya and Yang, Honghua},
+	Date-Added = {2018-07-08 21:19:39 +0000},
+	Date-Modified = {2018-07-08 21:20:37 +0000},
+	Doi = {10.1007/BF01293266},
+	Journal = {Algorithmica},
+	Number = {5},
+	Pages = {443--468},
+	Title = {Finding the closed partition of a planar graph},
+	Volume = {11},
+	Year = {1994}}
 
 @article{kk-totcb-93,
 	Author = {Kao, Ming-Yang and Klein, Philip N.},
@@ -19,7 +41,8 @@
 	Pages = {459--500},
 	Title = {Toward overcoming the transitive-closure bottleneck: {Efficient} parallel algorithms for planar digraphs},
 	Volume = {47},
-	Year = {1993}}
+	Year = {1993},
+	Bdsk-Url-1 = {https://doi.org/10.1016/0022-0000(93)90042-U}}
 
 @article{k-lpapd1-93,
 	Author = {Kao, Ming-Yang},
@@ -31,7 +54,8 @@
 	Pages = {431--459},
 	Title = {Linear-processor {NC} algorithms for planar directed graphs {I}: {Strongly} connected components},
 	Volume = {22},
-	Year = {1993}}
+	Year = {1993},
+	Bdsk-Url-1 = {https://doi.org/10.1137/0222032}}
 
 @article{ks-lpapd2-93,
 	Author = {Kao, Ming-Yang and Shannon, Gregory E.},
@@ -43,7 +67,8 @@
 	Pages = {460--481},
 	Title = {Linear-processor {NC} algorithms for planar directed graphs {II}: {Directed} spanning trees},
 	Volume = {22},
-	Year = {1993}}
+	Year = {1993},
+	Bdsk-Url-1 = {https://doi.org/10.1137/0222033}}
 
 @inproceedings{ks-lrgop-89,
 	Author = {Kao, Ming-Yang and Shannon, Gregory E.},
@@ -54,7 +79,8 @@
 	Doi = {10.1145/73007.73034},
 	Pages = {286--296},
 	Title = {Local reorientation, global order, and planar topology},
-	Year = {1989}}
+	Year = {1989},
+	Bdsk-Url-1 = {https://doi.org/10.1145/73007.73034}}
 
 @inproceedings{mnnw-mdpgo-18,
 	Arxiv = {1512.02068},
@@ -1173,7 +1199,8 @@
 	Publisher = {Springer},
 	Title = {The {van Kampen} obstruction and its relatives},
 	Volume = {266},
-	Year = {2009}}
+	Year = {2009},
+	Bdsk-Url-1 = {https://doi.org/10.1134/S0081543809030092}}
 
 @article{s-dpcem-98,
 	Author = {Skopenkov, Arkadiy B.},
@@ -1441,7 +1468,8 @@
 	Pages = {166--183},
 	Title = {Tutte's edge-colouring conjecture},
 	Volume = {70},
-	Year = {1997}}
+	Year = {1997},
+	Bdsk-Url-1 = {https://doi.org/10.1006/jctb.1997.1752}}
 
 @article{a-cas-26,
 	Author = {Alexander, James W.},
@@ -3824,7 +3852,8 @@ Theorem 2. Suppose G is a critical circular planar resistor network.  The values
 	Read = {1},
 	Title = {A Linear Algorithm for Embedding Planar Graphs Using {PQ}-trees},
 	Volume = {30},
-	Year = {1985}}
+	Year = {1985},
+	Bdsk-Url-1 = {https://doi.org/10.1016/0022-0000(85)90004-2}}
 
 @incollection{cdr-ilstl-02,
 	Author = {Connelly, Robert and Demaine, Erik D. and Rote, Günter},
