--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,25 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2018-07-08 16:23:35 -0500 
+%% Created for Jeff Erickson at 2018-07-10 11:02:50 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{ccl-fsncd-16,
+	Author = {Cabello, Sergio and {Colin de Verdière}, Éric and Lazarus, Francis},
+	Comments = {Full version of \cite{ccl-fsncd-10}},
+	Date-Added = {2018-07-10 15:33:36 +0000},
+	Date-Modified = {2018-07-10 15:34:47 +0000},
+	Doi = {10.20382/jocg.v7i1a7},
+	Journal = {J. Comput. Geom.},
+	Number = {1},
+	Pages = {123--148},
+	Title = {Finding shortest non-trivial cycles in directed graphs on surfaces},
+	Volume = {7},
+	Year = {2016}}
 
 @inproceedings{atz-itspd-03,
 	Author = {Arge, Lars and Toma, Laura and Zeh, Norbert},
@@ -17,7 +30,8 @@
 	Doi = {10.1145/777412.777427},
 	Pages = {85--93},
 	Title = {{I/O}-efficient topological sorting of planar {DAGs}},
-	Year = {2003}}
+	Year = {2003},
+	Bdsk-Url-1 = {https://doi.org/10.1145/777412.777427}}
 
 @article{ry-fcppg-94,
 	Author = {Ramachandran, Vijaya and Yang, Honghua},
@@ -29,7 +43,8 @@
 	Pages = {443--468},
 	Title = {Finding the closed partition of a planar graph},
 	Volume = {11},
-	Year = {1994}}
+	Year = {1994},
+	Bdsk-Url-1 = {https://doi.org/10.1007/BF01293266}}
 
 @article{kk-totcb-93,
 	Author = {Kao, Ming-Yang and Klein, Philip N.},
@@ -5195,8 +5210,9 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Arxiv = {cs.DS/0207082},
 	Author = {Eppstein, David},
 	Booktitle = {Proc. 14th Ann. ACM-SIAM Symp. Discrete Algorithms},
+	Comments = {No DOI — https://dl.acm.org/citation.cfm?id=644208},
 	Date-Added = {2012-07-13 00:12:57 +0000},
-	Date-Modified = {2017-11-24 15:39:05 +0000},
+	Date-Modified = {2018-07-09 22:10:36 +0000},
 	Keywords = {tree-cotree decomposition},
 	Pages = {599--608},
 	Read = {1},
@@ -5394,12 +5410,14 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Author = {Lazarus, Francis and Rivaud, Julien},
 	Booktitle = {Proc. 53rd Ann. IEEE Symp. Foundations Comput. Sci.},
 	Date-Added = {2012-07-02 22:03:26 +0000},
-	Date-Modified = {2017-11-01 21:44:33 +0000},
+	Date-Modified = {2018-07-09 22:18:38 +0000},
+	Doi = {10.1109/FOCS.2012.12},
 	Howpublished = {Preprint},
 	Pages = {440--449},
 	Read = {1},
 	Title = {On the homotopy test on surfaces},
-	Year = {2012}}
+	Year = {2012},
+	Bdsk-Url-1 = {https://doi.org/10.1109/FOCS.2012.12}}
 
 @article{ce-tnpcs-10,
 	Author = {{Colin de Verdière}, Éric and Erickson, Jeff},
@@ -13190,13 +13208,15 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{dg-tcs-99,
 	Author = {Dey, Tamal K. and Guha, Sumanta},
 	Date-Added = {2011-05-05 10:46:51 -0500},
-	Date-Modified = {2011-12-14 16:23:03 +0000},
+	Date-Modified = {2018-07-09 22:16:04 +0000},
+	Doi = {10.1006/jcss.1998.1619},
 	Journal = {J. Comput. System Sci.},
 	Pages = {297--325},
 	Read = {1},
 	Title = {Transforming Curves on Surfaces},
 	Volume = {58},
-	Year = {1999}}
+	Year = {1999},
+	Bdsk-Url-1 = {https://doi.org/10.1006/jcss.1998.1619}}
 
 @article{l-gem-82,
 	Author = {Lins, Sóstenes},
@@ -13336,7 +13356,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{ds-ntcps-95,
 	Author = {Dey, Tamal K. and Schipper, Haijo},
 	Date-Added = {2011-05-01 23:33:07 -0500},
-	Date-Modified = {2012-03-30 21:28:08 +0000},
+	Date-Modified = {2018-07-09 22:17:07 +0000},
+	Doi = {10.1007/BF02570697},
 	Journal = {Discrete Comput. Geom.},
 	Number = {1},
 	Pages = {93--110},
@@ -13918,8 +13939,10 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @inproceedings{ccl-fsncd-10,
 	Author = {Cabello, Sergio and {Colin de Verdière}, Éric and Lazarus, Francis},
 	Booktitle = {Proc. 26th Ann. Symp. Comput. Geom.},
+	Comments = {Preliminary version of \cite{ccl-fsncd-10}},
 	Date-Added = {2010-07-05 16:51:51 -0500},
-	Date-Modified = {2011-12-22 21:21:20 +0000},
+	Date-Modified = {2018-07-10 16:02:30 +0000},
+	Doi = {10.1145/1810959.1810988},
 	Pages = {156--165},
 	Read = {1},
 	Title = {Finding shortest non-trivial cycles in directed graphs on surfaces},
