--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,32 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2018-07-10 11:02:50 -0500 
+%% Created for Jeff Erickson at 2018-07-11 19:55:56 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{d-pgtt-87,
+	Author = {Dehn, Max},
+	Date-Added = {2018-07-12 00:51:14 +0000},
+	Date-Modified = {2018-07-12 00:52:30 +0000},
+	Doi = {10.1007/978-1-4612-4668-8},
+	Note = {Translated by John Stillwell},
+	Publisher = {Springer},
+	Title = {Papers on Group Theory and Topology},
+	Year = {1987},
+	Bdsk-Url-1 = {https://doi.org/10.1007/978-1-4612-4668-8}}
+
+@misc{c-gcsgc-83,
+	Author = {Cannon, James W.},
+	Date-Added = {2018-07-11 16:36:37 +0000},
+	Date-Modified = {2018-07-11 16:38:54 +0000},
+	Howpublished = {Unpublished manuscript},
+	Note = {Cited in \cite{gh-prges-97,fp-gffge-87,cw-gfsg-92}},
+	Title = {The growth of the closed surface groups and the compact hyperbolic {Coxeter} groups},
+	Year = {1983}}
 
 @article{ccl-fsncd-16,
 	Author = {Cabello, Sergio and {Colin de Verdière}, Éric and Lazarus, Francis},
@@ -20,7 +40,8 @@
 	Pages = {123--148},
 	Title = {Finding shortest non-trivial cycles in directed graphs on surfaces},
 	Volume = {7},
-	Year = {2016}}
+	Year = {2016},
+	Bdsk-Url-1 = {https://doi.org/10.20382/jocg.v7i1a7}}
 
 @inproceedings{atz-itspd-03,
 	Author = {Arge, Lars and Toma, Laura and Zeh, Norbert},
@@ -13946,7 +13967,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 	Pages = {156--165},
 	Read = {1},
 	Title = {Finding shortest non-trivial cycles in directed graphs on surfaces},
-	Year = {2010}}
+	Year = {2010},
+	Bdsk-Url-1 = {https://doi.org/10.1145/1810959.1810988}}
 
 @inproceedings{ccl-osaew-10,
 	Author = {Cabello, Sergio and {Colin de Verdière}, Éric and Lazarus, Francis},
@@ -16816,15 +16838,18 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 
 @article{d-tkzf-12,
 	Author = {Dehn, Max},
+	Comments = {doi.org/10.1007/BF01456725},
 	Date-Added = {2009-09-15 14:32:54 -0500},
-	Date-Modified = {2012-03-16 14:53:48 +0000},
+	Date-Modified = {2018-07-12 00:55:56 +0000},
+	Doi = {doi.org/10.1007/BF01456725},
 	Journal = {Math. Ann.},
 	Number = {3},
 	Pages = {413--421},
 	Read = {1},
 	Title = {Transformation der {Kurven} auf zweiseitigen {Flächen}},
 	Volume = {72},
-	Year = {1912}}
+	Year = {1912},
+	Bdsk-Url-1 = {http://eudml.org/doc/158578}}
 
 @article{d-uudg-11,
 	Author = {Dehn, Max},
