--- a/topology.bib
+++ b/topology.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2018-07-11 19:55:56 -0500 
+%% Created for Jeff Erickson at 2018-07-12 14:21:10 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -9605,8 +9605,10 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{a-tikl-28,
 	Author = {Alexander, James W.},
 	Date-Added = {2012-01-06 16:09:09 +0000},
-	Date-Modified = {2012-01-06 16:10:25 +0000},
+	Date-Modified = {2018-07-12 19:21:10 +0000},
+	Doi = {10.1090/S0002-9947-1928-1501429-1},
 	Journal = {Trans. Amer. Math. Soc.},
+	Keywords = {Alexander numbering},
 	Number = {2},
 	Pages = {275--306},
 	Read = {1},
