I think I got them all....

--- a/topology.bib
+++ b/topology.bib
@@ -7,6 +7,60 @@
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+@article{bs-mrpg-11,
+	Author = {Borcea, Ciprian and Streinu, Ileana},
+	Date-Added = {2018-11-23 09:24:01 -0600},
+	Date-Modified = {2018-11-23 09:26:34 -0600},
+	Doi = {10.1112/blms/bdr044},
+	Journal = {Bull. London Math. Soc.},
+	Number = {6},
+	Pages = {1093--1103},
+	Title = {Minimally rigid periodic graphs},
+	Volume = {43},
+	Year = {2011}}
+
+@article{r-rpfgf-14,
+	Arxiv = {1202.6652},
+	Author = {Ross, Elissa},
+	Comments = {No DOI},
+	Date-Added = {2018-11-23 09:06:04 -0600},
+	Date-Modified = {2018-11-23 09:10:35 -0600},
+	Journal = {Contrib. Discrete Math.},
+	Number = {1},
+	Pages = {11--45},
+	Title = {The rigidity of periodic frameworks as graphs on a fixed torus},
+	Url = {https://cdm.ucalgary.ca/cdm/index.php/cdm/article/view/329/179},
+	Volume = {9},
+	Year = {2014}}
+
+@article{r-icftft-15,
+	Arxiv = {1203.6561},
+	Author = {Ross, Elissa},
+	Date-Added = {2018-11-23 08:57:47 -0600},
+	Date-Modified = {2018-11-23 09:11:33 -0600},
+	Doi = {10.1007/s00454-015-9697-7},
+	Journal = {Discrete Comput. Geom.},
+	Number = {1},
+	Pages = {78--109},
+	Read = {1},
+	Title = {Inductive constructions for frameworks on a two-dimensional fixed torus},
+	Volume = {54},
+	Year = {2015}}
+
+@article{bs-lsppf-15,
+	Arxiv = {1501.03549},
+	Author = {Borcea, Ciprian and Streinu, Ileana},
+	Date-Added = {2018-11-20 15:50:31 -0600},
+	Date-Modified = {2018-11-20 15:51:10 -0600},
+	Doi = {10.1007/s00454-015-9689-7},
+	Journal = {Discrete Comput. Geom.},
+	Number = {4},
+	Pages = {747--782},
+	Title = {Liftings and Stresses for Planar Periodic Frameworks},
+	Volume = {53},
+	Year = {2015},
+	Bdsk-Url-1 = {https://doi.org/10.1007/s00454-015-9689-7}}
+
 
 @inproceedings{ew-tcsr-13,
 	Author = {Erickson, Jeff and Whittlesey, Kim},
